@startuml
entity User {
    *id
    --
    *username
    *email
    *password
    *first_name
    *last_name
    *phone_number
    *is_admin
    *created_at
    updated_at
}

entity Book {
    *id
    --
    *title
    *isbn
    *description
    image
    *price
    *quantity
    *release_year
    *is_deleted
    *created_at
    updated_at
}

entity Genre {
    *id
    --
    *name
    *created_at
    updated_at
}

entity BookGenre {
    *book_id
    *genre_id
    --
    *is_primary
}

entity BookAuthor {
    *book_id
    *author_id
}

entity Author {
    *id
    --
    *first_name
    *last_name
    *created_at
    updated_at
}

entity Publisher {
    *id
    --
    *name
    *state
    *email
    *created_at
    updated_at
}

entity Order {
    *id
    --
    *user_id
    *total_price
    *status
    *created_at
    updated_at
}

entity OrderItem {
    *id
    --
    *order_id
    *quantity
    *price
    *title
    *isbn
    book_id
    *created_at
    updated_at
}

entity CartItem {
    *id
    --
    *user_id
    *book_id
    *quantity
    *created_at
    updated_at
}

entity Review {
    *id
    --
    *user_id
    *book_id
    *rating
    *comment
    *created_at
    updated_at
}

entity WishList {
    *id
    --
    *user_id
    *name
    *created_at
    updated_at
}

entity WishListItem {
    *id
    --
    *wish_list_id
    *book_id
    *created_at
    updated_at
}

entity Voucher {
    *id
    --
    *code
    *discount
    *expiration_date
    *quantity
    *type
    *created_at
    updated_at
}

Voucher ||--o{ Order
User ||--o{ Order
Order ||--o{ OrderItem
User ||--o{ CartItem
Book ||--o{ CartItem
User ||--o{ Review
Book ||--o{ Review
User ||--o{ WishList
WishList ||--o{ WishListItem
BookGenre }|--|| Book
BookGenre }|--|| Genre
BookAuthor }|--|| Book
BookAuthor }|--|| Author
Book ||--o{ WishListItem
Book ||--o{ OrderItem
Author }|--o{ Book
Publisher }|--o{ Book
Genre }|--o{ Book
@enduml